--- a/src/components/SidebySide.astro
+++ b/src/components/SidebySide.astro
@@ -3,7 +3,7 @@ import Button from '@/components/shared/Button.astro';
 import classes from '@/data/styles.json';
 ---
 
-<section class="bg-secondary-bg py-24" id="about">
+<section class="bg-background-secondary py-24" id="about">
   <div class={classes.container}>
     <div class="flex flex-row gap-8">
       <div class="w-1/3">
@@ -21,7 +21,7 @@ import classes from '@/data/styles.json';
       </div>
       <div class="grid w-2/3 grid-cols-1 gap-6 md:grid-cols-2">
         <div
-          class="rounded-3xl border border-transparent bg-card-light p-8 transition-colors hover:border-border-light dark:bg-card-dark dark:hover:border-border-dark"
+          class="border-border-tertiary bg-card-primary transform rounded-3xl border p-8 transition-all hover:-translate-y-1"
         >
           <span class="mb-4 text-3xl text-primary material-symbols-outlined dark:text-white"
             >bolt</span
@@ -33,7 +33,7 @@ import classes from '@/data/styles.json';
           </p>
         </div>
         <div
-          class="rounded-3xl border border-transparent bg-card-light p-8 transition-colors hover:border-border-light md:mt-12 dark:bg-card-dark dark:hover:border-border-dark"
+          class="border-border-tertiary bg-card-primary rounded-3xl border p-8 transition-all hover:-translate-y-1 md:mt-12"
         >
           <span class="mb-4 text-3xl text-primary material-symbols-outlined dark:text-white"
             >accessibility_new</span
@@ -45,7 +45,7 @@ import classes from '@/data/styles.json';
           </p>
         </div>
         <div
-          class="rounded-3xl border border-transparent bg-card-light p-8 transition-colors hover:border-border-light dark:bg-card-dark dark:hover:border-border-dark"
+          class="border-border-tertiary bg-card-primary rounded-3xl border p-8 transition-all hover:-translate-y-1"
         >
           <span class="mb-4 text-3xl text-primary material-symbols-outlined dark:text-white"
             >grid_view</span
@@ -57,7 +57,7 @@ import classes from '@/data/styles.json';
           </p>
         </div>
         <div
-          class="rounded-3xl border border-transparent bg-card-light p-8 transition-colors hover:border-border-light md:mt-12 dark:bg-card-dark dark:hover:border-border-dark"
+          class="border-border-tertiary bg-card-primary rounded-3xl border p-8 transition-all hover:-translate-y-1 md:mt-12"
         >
           <span class="mb-4 text-3xl text-primary material-symbols-outlined dark:text-white"
             >integration_instructions</span
