--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -14,7 +14,7 @@ const { socials, copyright } = Astro.props;
 
 <footer>
   <section
-    class="relative overflow-hidden border-t border-gray-100 bg-white px-6 py-24 dark:border-gray-800 dark:bg-background-dark"
+    class="border-border-secondary bg-background-primary relative overflow-hidden border-t px-6 py-24"
     id="contact"
   >
     <div class={classes.container}>
