--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,7 @@ const {
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
   </head>
-  <body class="bg-primary-bg font-body text-primary transition-colors duration-300 dark:text-white">
+  <body class="bg-background-primary font-body text-primary-text transition-colors duration-300">
     {showHeader && <Header links={globalData.header} socials={globalData.socials} />}
 
     <main class:list={['min-h-screen', { 'mt-28': !hasHero }]}>
