fix: upgrade astro, tailwind

--- a/src/components/ThumbnailWork.astro
+++ b/src/components/ThumbnailWork.astro
@@ -7,9 +7,8 @@ interface Props {
   tags: string[];
   githubUrl?: string;
   liveUrl?: string;
-  id: string;
 }
-const { id, title, shortDescription, tags, githubUrl, liveUrl } = Astro.props;
+const { title, shortDescription, tags, githubUrl, liveUrl } = Astro.props;
 ---
 
 <article class="group h-full cursor-pointer md:row-span-2">
